# M-sequence

./: CMakeLists.txt  Constants.h  README.md  README.txt  Transmitter.cpp  Transmitter.h  constants.h  inputJson.cpp  inputJson.h  main.cpp  mainFunctions.cpp  mainFunctions.h  param.json  readInput.cpp  readInput.h  transmitterAndNoise.cpp  transmitterAndNoise.h
Tests/: ChannelIntegrTest.cpp
Tests/genMseqTest/: M-sequences.json  genMseqTest.cpp  genMseqTest.py  readJson.cpp  readJson.h  readValidMseq.cpp  readValidMseq.h
